--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,28 @@
-@import-normalize; /* bring in normalize.css styles */
-
-body {
+*{
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
+li{
+  list-style-type: none;
+}
+a{
+  font-style: normal;
+   text-decoration: none;
+}
+.container{
+  padding: 10px 20px;
+}
+@media screen and (max-width: 768px) {
+  .container{
+    padding: 15px;
+  }
+  
+}
+@media screen and (max-width:320px) {
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  .container{
+    padding: 10px;
+  }
+  
 }
