--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -47,17 +47,20 @@
 }
 @media screen and (max-width:768px){
     .header{
-        padding: 20px 50px;
+        padding: 20px 30px;
     }
         .title {
             font-size: 18px;
+            width: 100px;
         }
     
         .titleShadow {
             font-size: 18px;
         }
          .list {
-            gap: 30px;
+            flex-direction: column;
+            align-items: start;
+            gap: 10px;
          }
         
         .listParagraph {
@@ -65,18 +68,11 @@
         }
         
         .paragraph {
-            font-size: 18px;
-            color: #fff;
+            font-size: 14px;
                 }
-        
                 .paragraphShadow {
-                    font-size: 18px;
-                    color: #fff;
-                    opacity: 0.1;
-                    position: absolute;
-                    top: -7px;
-                    right: -7px;
-                }ß
+                    font-size: 14px;  
+                }
     .button{
         display: flex;
         align-items: center;
@@ -86,5 +82,6 @@
         font-size: 20px;
         color: #fff;
         font-weight: 700;
+        transform: rotate(90deg);
     }
 }
