--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
   margin: 0;
   padding: 0;
 }
+body{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+  background-color: #aee1e7;
+}
 li{
   list-style-type: none;
 }
