--- a/src/components/FormCreate/FormCreate.module.css
+++ b/src/components/FormCreate/FormCreate.module.css
@@ -1,9 +1,11 @@
+
 .formContainer{
     background-color: #fafafa;
     height: 300px;
     width: 300px;
     border-radius: 10px;
-    margin-left: auto;
+   margin-left: auto;
+   z-index: 1;
 }
 .form{
     display: flex;
@@ -69,4 +71,29 @@
         border-width: 2px;
         background-color: #fafafa;
     }
+}
+.btnClose{
+    display: none;
+}
+@media screen and (max-width:768px) {
+  .formContainer{
+    position: absolute;
+    transform: translate(-10%,-200%);
+    top: 50%;
+    left: 50%;
+    transition: transform 500ms ease-in;
+  }
+  .btnClose{
+    display: flex;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: none;
+    background-color: transparent;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.isOpen{
+    transform: translate(-50%,-50%);
 }
